# hypr-dao

./: .gitignore  Cargo.toml  README.md  metadata.json  package-lock.json
api/: app.wit  bind-and-lock-template-dot-os-v0.wit  lock-and-bind-template-dot-os-v0.wit  types-bind-and-lock-template-dot-os-v0.wit  types-lock-and-bind-template-dot-os-v0.wit
api/hns-indexer-wit/: hns-indexer:sys-v0.wit
bind-and-lock/: Cargo.toml
bind-and-lock/src/: lib.rs
example-apps/file-explorer/explorer/: Cargo.toml
hyperprocess_macro/: Cargo.toml  README.md  build.rs
hyperprocess_macro/src/: lib.rs
hypr-dao/: Cargo.toml
hypr-dao/src/: icon  lib.rs
lock-and-bind/: Cargo.toml
lock-and-bind/src/: lib.rs
pkg/: manifest.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  ClaimPage.tsx  index.css  main.tsx
ui/src/api/: has_voted.ts  proposals.ts  quorum.ts  vote_confirmations.ts  votes.ts  voting_power.ts
ui/src/store/: bind_and_lock.ts  lock_and_bind.ts
ui/src/types/: bind_and_lock.ts  global.ts  lock_and_bind.ts  proposals.ts  quorum.ts  votes.ts  voting_power.ts
