[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[workspace]
members = [
    "hypr-dao",
    "target/hypr-dao-caller-util?",
]
resolver = "2"

[patch.crates-io]
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "cd0188523241c50f3879b34396c332afcae57af0" }
