[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[workspace]
members = [
    "hypr-dao",
    "target/hypr-dao-caller-util?",
]
resolver = "2"

[patch.crates-io]
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "1db70f23ea4543a2db12686873b7567d3ac7a98c" }
