[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[workspace]
members = [
    "hypr-dao",
    "target/hypr-dao-caller-util?",
]
resolver = "2"

[patch.crates-io]
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "34b1f1d857f76fb474f7af96f089961445758edb" }
