[package]
name = "hyperprocess-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
hyperware_process_lib = { path = "/Users/johnathanreale/RustroverProjects/process_lib", features = ["hyperapp"] }
