[dependencies]
alloy-primitives = "0.8.15"
anyhow = "1.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.hyperprocess_macro]
package = "hyperprocess-macro"
path = "../hyperprocess_macro"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
path = "/Users/johnathanreale/RustroverProjects/process_lib"

[dependencies.hypr_dao_caller_utils]
optional = true
path = "../target/hypr-dao-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
caller-utils = ["hypr_dao_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "hypr-dao"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
