[dependencies]
alloy-primitives = "=0.8.26"
alloy-sol-macro = "=0.8.26"
alloy-sol-types = "=0.8.26"
anyhow = "1.0"
hyperapp_macro = "0.2.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.hyperware_process_lib]
features = [
    "hyperapp",
    "simulation-mode",
]
version = "3.0.0"

[dependencies.hypr_dao_caller_utils]
optional = true
path = "../target/hypr-dao-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
caller-utils = ["hypr_dao_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "hypr-dao"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
